// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conditional assignment (1) 1`] = `
"<script lang="ts">
  const foo = true && {
    bar: "baz",
  };
</script>
"
`;

exports[`conditional assignment (2) 1`] = `
"<script lang="ts">
  const foo = false || {
    bar: "baz",
  };
</script>
"
`;

exports[`conditional assignment (3) 1`] = `
"<script lang="ts">
  const foo = null ?? {
    bar: "baz",
  };
</script>
"
`;

exports[`destructuring assignment (1) 1`] = `
"<script lang="ts">
  const {
    foo,
    bar: { baz },
  } = {};
</script>
"
`;

exports[`destructuring assignment (2) 1`] = `
"<script lang="ts">
  arr.forEach(
    ({
      data: {
        message: { errors },
      },
    }) =>
    {
      // code
    },
  );
</script>
"
`;

exports[`object assignment (1) 1`] = `
"<script lang="ts">
  const foo = {};
</script>
"
`;

exports[`object assignment (2) 1`] = `
"<script lang="ts">
  const foo = {
    bar: {
      baz: "baz",
    },
  };
</script>
"
`;

exports[`object assignment (3) 1`] = `
"<script lang="ts">
  const foo = {
    bar()
    {},
    ["baz"]()
    {},
  };
</script>
"
`;
